# fio-de-ariadne

./: .env.sample  .gitignore  Dockerfile  Pipfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  runtime.txt  scrapy.cfg  setup.cfg
.github/workflows/: tests.yml
crawler/: api_client.py  cast.py  connections.py  items.py  middlewares.py  pipelines.py  settings.py  text.py  typing.py
crawler/clients/: ibge.py
crawler/spiders/: __init__.py  parana.py
web/: asgi.py  settings.py  urls.py  wsgi.py
web/api/: urls.py  views.py
web/api/tests/: test_api_view.py
web/core/: admin.py  apps.py  models.py  storages.py
web/core/management/commands/: crawl.py
web/core/migrations/: 0001_initial.py  0002_sort_kid_model.py  0003_enlarge_color_text_fields.py  0004_add_age_at_occurrence_to_kid_model.py  0005_change_color_to_choice_field.py  0006_adds_fields_for_city_and_state.py  0007_adds_kid_image_model.py
