[tool.poetry]
name = "fio-de-ariadne"
version = "0.0.1"
description = "Banco de dados estruturado de crianças desaparecidas no Brasil"
authors = ["Eduardo Cuducos <cuducos@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.12.46"
dj_database_url = "^0.5.0"
django = "^3.0.5"
django-cleanup = "^4.0.0"
django-cors-headers = "^3.2.1"
django-extensions = "^2.2.9"
django-storages = "^1.9.1"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
python-decouple = "^3.3"
requests = "^2.23.0"
restless = "^2.1.1"
scrapy = "^2.0.1"

[tool.poetry.dev-dependencies]
createnv = "^0.0.1"
ipython = "^7.13.0"
model_bakery = "^1.1.0"
mypy = "^0.770"
pytest-black = "^0.3.8"
pytest-django = "^3.9.0"
pytest-flake8 = "^1.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
